// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Если вставить четвертак и провернуть ручку, машина отдаёт жвачку 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Если вставить четвертак и провернуть ручку, машина отдаёт жвачку 2`] = `
"You inserted a quarter
You turned...
A gumball comes rolling out the slot...
Oops, out of gumballs
"
`;

exports[`Если количество вставленных четвертаков больше, чем жвачки, хранящейся в автомате, то можно вернуть оставшиеся четвертаки 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Если количество вставленных четвертаков больше, чем жвачки, хранящейся в автомате, то можно вернуть оставшиеся четвертаки 2`] = `
"You inserted a quarter
You inserted a quarter
You turned...
A gumball comes rolling out the slot...
Oops, out of gumballs
You turned but there's no gumballs
1 quarter returned
You turned but there's no gumballs
"
`;

exports[`Если ручка была провёрнута четвертак изъять нельзя 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Если ручка была провёрнута четвертак изъять нельзя 2`] = `
"You inserted a quarter
You turned...
A gumball comes rolling out the slot...
Oops, out of gumballs
You can't eject, you haven't inserted a quarter yet
"
`;

exports[`Можно вставлять до пяти четвертаков 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 1 gumball
Machine is waiting for turn of crank
"
`;

exports[`Можно вставлять до пяти четвертаков 2`] = `
"You inserted a quarter
You inserted a quarter
You inserted a quarter
You inserted a quarter
You inserted a quarter
You can't insert another quarter
"
`;

exports[`Можно достать всю жвачку из автомата 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Можно достать всю жвачку из автомата 2`] = `""`;

exports[`Можно забрать несколько четвертаков, после того как они были вставлены 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 1 gumball
Machine is waiting for quarter
"
`;

exports[`Можно забрать несколько четвертаков, после того как они были вставлены 2`] = `
"You inserted a quarter
You inserted a quarter
You inserted a quarter
3 quarters returned
"
`;

exports[`Можно забрать четвертак, после того как он был вставлен 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 1 gumball
Machine is waiting for quarter
"
`;

exports[`Можно забрать четвертак, после того как он был вставлен 2`] = `
"You inserted a quarter
1 quarter returned
"
`;

exports[`Можно заполнить автомат 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 1 gumball
Machine is waiting for quarter
"
`;

exports[`Можно заполнить автомат 2`] = `""`;

exports[`Нельзя вставить два четвертака за раз 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 2 gumballs
Machine is waiting for turn of crank
"
`;

exports[`Нельзя вставить два четвертака за раз 2`] = `
"You inserted a quarter
You inserted a quarter
"
`;

exports[`Нельзя достать четвертак, если он не был всавлен 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 2 gumballs
Machine is waiting for quarter
"
`;

exports[`Нельзя достать четвертак, если он не был всавлен 2`] = `
"You can't eject, you haven't inserted a quarter yet
"
`;

exports[`Нельзя получить жвачку если она закочилась 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Нельзя получить жвачку если она закочилась 2`] = `
"You can't insert a quarter, the machine is sold out
You turned but there's no gumballs
"
`;

exports[`Нельзя провернуть ручку, если четвертак не был вставлен 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 1 gumball
Machine is waiting for quarter
"
`;

exports[`Нельзя провернуть ручку, если четвертак не был вставлен 2`] = `
"You turned but there's no quarter
"
`;

exports[`После первого шарика жвачки можно получить следующий, если в автомате есть жвачка 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`После первого шарика жвачки можно получить следующий, если в автомате есть жвачка 2`] = `
"You inserted a quarter
You turned...
A gumball comes rolling out the slot...
You inserted a quarter
You turned...
A gumball comes rolling out the slot...
Oops, out of gumballs
"
`;

exports[`При заполнении автомата, вставленные четвертаки не теряются 1`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2019
Inventory: 3 gumballs
Machine is waiting for quarter
"
`;

exports[`При заполнении автомата, вставленные четвертаки не теряются 2`] = `
"You inserted a quarter
You inserted a quarter
You inserted a quarter
You turned...
A gumball comes rolling out the slot...
Oops, out of gumballs
You turned but there's no gumballs
You turned...
A gumball comes rolling out the slot...
You turned...
A gumball comes rolling out the slot...
"
`;
